--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,17 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Build output
 dist
 dist-ssr
+
+# Local environment files
 *.local
+.env*
+!.env.example
 
 # Editor directories and files
 .vscode/*
@@ -22,4 +29,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.env*
